--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <p>A Full Stack Developer having specialization in front end & back end development. I hava 1+ year of experience in Web Development and Java. I also have Frontend Skills in Javascript, HTML, CSS / SASS & Boostrap.</p>
             <div class="btn_box">
-                <a href="resume/NITISH KUMAR PAIDI.docx" class="btn">Hire me <i class='bx bx-chevron-right'></i></a>
+                <a href="/resume/NITISH KUMAR PAIDI.docx" class="btn">Hire me <i class='bx bx-chevron-right'></i></a>
                 <a href="#contact" class="btn">Let's Talk <i class='bx bx-chevron-right'></i></a>
             </div>
         </div>
